Refactor frontend to use redux

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,18 +6,6 @@ body {
     margin: 0px;
 }
 
-.app-root {
-
-}
-
-.app-wrapper {
-
-}
-
-.app-placeholder {
-
-}
-
 .auth-modal {
     position: fixed;
     width: 100%;
@@ -37,7 +25,10 @@ body {
     top: 25%;
     bottom: 25%;
     margin: auto;
-    background: white;
+    background-color: #f5ce9f;
+    background-image: linear-gradient(45deg, #b8581e 25%, transparent 25%, transparent 75%, #b8581e 75%, #b8581e), linear-gradient(45deg, #b8581e 25%, transparent 25%, transparent 75%, #b8581e 75%, #b8581e);
+    background-size: 60px 60px;
+    background-position: 0 0, 30px 30px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -47,7 +38,7 @@ body {
     }
 }
 
-@media only screen and (max-height: 768px) {
+@media only screen and (max-height: 480px) {
     .auth-modal-inner {
         top: 5%;
         bottom: 5%;
@@ -60,6 +51,16 @@ body {
 }
 
 .auth-modal-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20pt;
+    background-color: #f5ce9f;
+    border: 5px groove #b8581e;
+}
+
+.auth-modal-loading-wrapper {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -78,6 +79,17 @@ body {
     transform: translate(-50%, -50%);
 }
 
+.signup-form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    font-size: 20pt;
+    background-color: #f5ce9f;
+    border: 5px groove #b8581e;
+}
+
 .navbar {
     height: 40px;
     background-color: saddlebrown;
@@ -91,3 +103,42 @@ body {
     background-color: saddlebrown;
     border-color: burlywood;
 }
+
+/* Loading Icon CSS */
+
+.lds-ring {
+    display: inline-block;
+    position: relative;
+    width: 64px;
+    height: 64px;
+  }
+  .lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 51px;
+    height: 51px;
+    margin: 6px;
+    border: 6px solid #fff;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #fff transparent transparent transparent;
+  }
+  .lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
