--- a/client/src/index.css
+++ b/client/src/index.css
@@ -170,9 +170,12 @@ body {
     border-radius: 25px;
     text-align: center;
     margin: 10px;
-    cursor: pointer;
     border: #b8581e 4px solid;
     box-shadow: 5px 5px;
+}
+
+.game-list-tile.clickable {
+    cursor: pointer;
 }
 
 .game-list-tile-header {
@@ -184,6 +187,14 @@ body {
 .game-list-tile-content {
     position: relative;
     height: 80%;
+}
+
+.game-list-invite-input {
+    height: 30%;
+}
+
+.game-list-invite-button {
+    height: 30%;
 }
 
 .local-game-tile-new {
@@ -248,6 +259,14 @@ body {
     width: 500px;
     padding: 10px;
     display: inline-block;
+}
+
+.text-success {
+    color: green;
+}
+
+.text-error {
+    color: red;
 }
 
 
