--- a/client/src/index.css
+++ b/client/src/index.css
@@ -269,9 +269,19 @@ body {
     color: red;
 }
 
+.text-flash {
+    animation: flasher 1s linear infinite;
+}
+
 
 /* Chess icon font def */
 @font-face {
     font-family: 'chess-icon';
     src: url('fonts/casefont.ttf');
-  }
+}
+
+@keyframes flasher {
+    50% {
+        opacity: 0;
+    }
+}
