--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,245 +20,11 @@ body {
     background-color: buttonface;
 }
 
-.auth-modal {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    background-color: rgba(0,0,0, 0.5);
-}
-
-.auth-modal-inner {
-    position: absolute;
-    left: 25%;
-    right: 25%;
-    top: 25%;
-    bottom: 25%;
-    margin: auto;
-    background-color: #f5ce9f;
-    background-image: linear-gradient(45deg, #b8581e 25%, transparent 25%, transparent 75%, #b8581e 75%, #b8581e), linear-gradient(45deg, #b8581e 25%, transparent 25%, transparent 75%, #b8581e 75%, #b8581e);
-    background-size: 60px 60px;
-    background-position: 0 0, 30px 30px;
-}
-
-@media only screen and (max-width: 768px) {
-    .auth-modal-inner {
-        left: 5%;
-        right: 5%;
-    }
-}
-
-@media only screen and (max-height: 480px) {
-    .auth-modal-inner {
-        top: 5%;
-        bottom: 5%;
-    }
-}
-
-.auth-modal-top-panel {
-    position: relative;
-    height: 50%;
-}
-
-.auth-modal-text {
+.centered {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 20pt;
-    background-color: #f5ce9f;
-    border: 5px groove #b8581e;
-}
-
-.auth-modal-loading-wrapper {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.auth-modal-content {
-    position: relative;
-    height: 50%;
-}
-
-.auth-modal-button-wrapper {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.signup-form {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    font-size: 20pt;
-    background-color: #f5ce9f;
-    border: 5px groove #b8581e;
-}
-
-.navbar {
-    height: 40px;
-    background-color: #b8581e;
-    width: 100%;
-}
-
-.logout-button {
-    float: right;
-    height: 100%;
-}
-
-/* Loading Icon CSS */
-
-.lds-ring {
-    display: inline-block;
-    position: relative;
-    width: 64px;
-    height: 64px;
-}
-.lds-ring div {
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    width: 51px;
-    height: 51px;
-    margin: 6px;
-    border: 6px solid #fff;
-    border-radius: 50%;
-    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #fff transparent transparent transparent;
-}
-.lds-ring div:nth-child(1) {
-    animation-delay: -0.45s;
-}
-.lds-ring div:nth-child(2) {
-    animation-delay: -0.3s;
-}
-.lds-ring div:nth-child(3) {
-    animation-delay: -0.15s;
-}
-@keyframes lds-ring {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
-  
-/* body {
-    background-color: darkgray;
-} */
-
-.game-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-}
-
-.game-list-tile {
-    background-color: #f5ce9f;
-    height: 200px;
-    width: 400px;
-    border-radius: 25px;
-    text-align: center;
-    margin: 10px;
-    border: #b8581e 4px solid;
-    box-shadow: 5px 5px;
-}
-
-.game-list-tile.clickable {
-    cursor: pointer;
-}
-
-.game-list-tile-header {
-    font-size: 20px;
-    height: 20%;
-    padding-top: 10px;
-}
-
-.game-list-tile-content {
-    position: relative;
-    height: 80%;
-}
-
-.game-list-invite-input {
-    height: 30%;
-}
-
-.game-list-invite-button {
-    height: 30%;
-}
-
-.local-game-tile-new {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 20pt;
-    background-color: #f5ce9f;
-    border: 5px groove #b8581e;
-}
-
-.game-board {
-    height: 100%;
-    width: 100%;
-    background-color: #f5ce9f;
-    border-collapse: collapse;
-    border: #b8581e 4px solid;
-    box-shadow: 5px 5px;
-}
-
-.game-board-col {
-    height: 12.5%;
-    width: 12.5%;
-    font-family: 'chess-icon';
-    text-align: center;
-    font-size: 40px;
-    cursor: default;
-}
-
-.game-board.small .game-board-col {
-    font-size: 10px;
-}
-
-.game-list-tile-board-wrapper {
-    height: 140px;
-    width: 140px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.game-board-col.clickable {
-    cursor: pointer;
-}
-
-.game-board-col.selected {
-    border: white 5px solid;
-}
-
-.game-board-row:nth-child(odd) .game-board-col:nth-child(even), .game-board-row:nth-child(even) .game-board-col:nth-child(odd) {
-	background: #b8581e;
-}
-
-.active-game {
-    text-align: center;
-}
-
-.active-game-board-wrapper {
-    height: 500px;
-    width: 500px;
-    padding: 10px;
-    display: inline-block;
 }
 
 .text-success {
