--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -5,6 +5,14 @@
     width: 100%;
 }
 
+.navbar .player-nickname {
+    color: white;
+    display: inline-block;
+    font-size: 24px;
+    padding-top: 5px;
+    padding-left: 10px;
+}
+
 .navbar .ac-button {
     float: right;
     height: 100%;
